@@ -5,14 +5,18 @@ ChangeLog
 current: quickly-0.5.0
 
 - requires parce-0.30.0
+- added time module for time computations
 - added rhythm module to manipulate durations in music or a part thereof
 - added dom.scope module to find nodes from included files
 - introduced lily.ChordBody and FigureBody, to be able to add Duration at Chord
   and Figure directly
 - added lily.Durable as base type for any stuff that can have a Duration
+- notes as argument to \relative, \key or \transpose are now Pitch, not Note
+- handle single durations in lyricmode, just like Unpitched
+- improvements to duration module, add duration.Transform
 - added transform method to all Music nodes, to calculate durations in child
   nodes
-- improvements to duration module
+- documentation improvements
 
 
 2021-12-31: quickly-0.4.0
